<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Vaccine</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="welcome">مرحبا</string>
    <string name="sign_in">دخول</string>
    <string name="exit">خروج</string>
    <string name="you_should_have_an_account">يجب على مدير النظام انشاء حساب خاص بك</string>
    <string name="sign_in_title">تسجيل الدخول</string>

    <string name="ok">حسناً</string>
    <string name="cancel">إلغاء</string>
    <string name="please_enter_credentials">الرجاء ادخال بيانات صحيحة</string>
    <string name="logging_in">جاري تسجيل الدخول</string>
    <string name="phone">رقم الهاتف</string>
    <string name="password">كلمة المرور</string>


    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="body">Body</string>
    <string name="email">البريد الالكتروني</string>
    <string name="default_notification_channel_id">12</string>
    <string name="permission_denied">تم رفض الأذن</string>
    <string name="Case">حالة</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="dot_indicator">Dot Indicator</string>
    <string name="register">تسجيل</string>

    <string name="title_activity_index">الاحصائيات</string>
    <string name="title_activity_donor">المتبرعين</string>
    <string name="title_activity_requests">طلبات التبرع</string>
    <string name="title_activity_swipes">المسحات</string>
    <string name="title_activity_map">الخريطة</string>
    <string name="title_activity_posts">المنشورات</string>
    <string name="requests">طلبات التبرع</string>
    <string name="map">الخريطة</string>
    <string name="donors">المتبرعين</string>
    <string name="swipes">المسحات</string>
    <string name="posts">المنشورات</string>
    <string name="sign_out">تسجيل خروج</string>
    <string name="centers">مراكز التطعيم</string>
    <string name="stats">الاحصائيات</string>
    <string name="change_password">تغيير كلمة المرور</string>
    <string name="confirm_password">تأكيد كلمةالمرور</string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="current_password">كلمة المرور الحالية</string>
    <string name="password_err_msg">something went wrong check your internet connection</string>
    <string name="create_new_account">تسجيل حساب جديد</string>
    <string name="passord_changed_success">تم تغيير كلمة المرور بنجاح</string>
    <string name="current_password_wrong">كلمة المرور الحالية خطاء</string>

    <string name="toolbar_title">Contacts</string>
    <string name="action_search">بحث</string>
    <string name="search_hint">Type name…</string>
    <string name="please_use_email">الرجاء استعمال البريد الالكتروني</string>

</resources>