<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/ic_request"
            android:title="@string/requests" />
        <item
            android:id="@+id/nav_donors"
            android:icon="@drawable/ic_blood"
            android:title="@string/donors" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_swipes"
            android:icon="@drawable/ic_medical"
            android:title="@string/swipes" />
        <item
            android:id="@+id/nav_posts"
            android:icon="@drawable/ic_posts"
            android:title="@string/posts" />
        <item
            android:id="@+id/nav_centers"
            android:icon="@drawable/ic_center"
            android:title="@string/centers" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit"
            android:title="@string/sign_out" />
    </group>
</menu>