<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLayout"
    android:background="@drawable/ic_app_bg"
    tools:context=".StartActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/app_name"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/welcome"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_above="@id/txt_rider_app"
        android:layout_margin="16dp"


        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnSignIn"
            android:background="@drawable/btn_sign_in_background"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:text="@string/sign_in"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnCancel"
            android:background="@drawable/btn_register_background"
            android:textColor="@color/btnRegister"
            android:layout_width="0dp"
            android:text="@string/exit"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_rider_app"
        android:text="@string/you_should_have_an_account"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:textSize="12sp"
        android:textAlignment="center"
        android:textColor="@color/bottomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>